--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "counter",
-  "homepage": "https://github.com/zahramirkazemi/counter",
+  "homepage": "https://zahramirkazemi.github.io/counter/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
